--- a/src/plot/CMakeLists.txt
+++ b/src/plot/CMakeLists.txt
@@ -17,7 +17,7 @@ find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
-find_package( OpenCV REQUIRED )
+find_package( OpenCV REQUIRED COMPONENTS viz )
 
 include_directories(include)
 ament_export_include_directories(include)
